--- a/indext.html
+++ b/indext.html
@@ -630,12 +630,12 @@
     <script>
         // 🔥 Firebase Configuration - REPLACE WITH YOUR CONFIG
         const firebaseConfig = {
-            apiKey: "your-api-key-here",
-            authDomain: "your-project-id.firebaseapp.com",
-            projectId: "your-project-id",
-            storageBucket: "your-project-id.appspot.com",
-            messagingSenderId: "123456789",
-            appId: "your-app-id-here"
+            apiKey: "AIzaSyABv0GE8TLNkQi92NgtSGewxCOnXMevqjs",
+            authDomain: "ticket-validation-system.firebaseapp.com",
+            projectId: "ticket-validation-system",
+            storageBucket: "ticket-validation-system.firebasestorage.app",
+            messagingSenderId: "672112965367",
+            appId: "1:672112965367:web:8a911668e5ab7765fb85f2"
         };
 
         // Initialize Firebase
